changes and fixes have been made to the games to make them more resposive and able to play on smaller screens. further updates also made to profile page. Continued work to be done on that and connect page also

--- a/game/static/games/stylesheets/hangman_stylesheet.css
+++ b/game/static/games/stylesheets/hangman_stylesheet.css
@@ -57,7 +57,6 @@ body {
 
 #myCanvas {
 	background: #ffffff;
-	text-align: center;
 	border: 1px solid #000000;
 	margin-top: 150px;
 	margin-right: 500px;
@@ -73,37 +72,128 @@ body {
 }
 
 
-table {
-	background-color: white;
-	margin-left: auto;
-	margin-right: auto;
-}
-
 button {
-	width: 80px;
-	height: 50px;
-	font-size: 35px;
+	width: 75px;
+	height: 60px;
+	font-size: 40px;
 	background-color: #bdc3c7;
 	color: black;
 }
 
+#next-game:hover, #reset:hover {
+	color: #d5d5d5;
+}
+
 #next-game {
 	position: relative;
-	left: 1000px;
-	top: -140px;
+	left: 450px;
+	top: 200px;
 	width: 200px;
 	height: 100px;
+	font-size: 40px;
 	border-radius: 50%;
 	background-color: #34eba1;
 }
 
 #reset {
 	position: relative;
-	left: -500px;
-	top:-50px;
+	left: -450px;
+	top: 200px;
 	width: 150px;
 	height: 80px;
 	font-size: 40px;
 	border-radius: 50%;
 	background-color: #eb3434;
+}
+
+
+
+
+
+/* mid - max size */ 
+@media (max-width: 992px) {
+	button {
+		width: 65px;
+		height: 50px;
+		font-size: 35px;
+	}
+
+	#next-game {
+		position: relative;
+		left: 100px;
+		top: 0px;
+		width: 180px;
+		height: 95px;
+		font-size: 35px;
+	}
+
+	#reset {
+		position: relative;
+		left: -100px;
+		top: 0px;
+		width: 140px;
+		height: 75px;
+		font-size: 35px;
+	}
+}
+
+
+
+/* small - medium screen */ 
+
+@media (max-width: 768px) {
+	button {
+		width: 60px;
+		height: 45px;
+		font-size: 30px;
+	}
+
+	#next-game {
+		position: relative;
+		left: 100px;
+		top: 0px;
+		width: 140px;
+		height: 70px;
+		font-size: 25px;
+	}
+
+	#reset {
+		position: relative;
+		left: -100px;
+		top: 0px;
+		width: 120px;
+		height: 60px;
+		font-size: 30px;
+	}
+	
+}
+
+
+
+
+/* Smallest screens */ 
+@media (max-width: 576px) {
+	button {
+		width: 45px;
+		height: 30px;
+		font-size: 20px;
+	}
+
+	#next-game {
+		position: relative;
+		left: 50px;
+		top: 0px;
+		width: 120px;
+		height: 55px;
+		font-size: 20px;
+	}
+
+	#reset {
+		position: relative;
+		left: -50px;
+		top: 0px;
+		width: 100px;
+		height: 50px;
+		font-size: 20px;
+	}
 }
