--- a/static/site/stylesheets/style.css
+++ b/static/site/stylesheets/style.css
@@ -25,6 +25,7 @@ html, body{
   height: 100%;
 }
 
+
 .carousel-caption {
   position: absolute;
   top: 50%;
@@ -126,6 +127,14 @@ html, body{
   color: #0e76a8
 }
 
+header {
+  background-color: #3f3f3f;
+  color: #d5d5d5;
+  padding: 2rem;
+}
+
+
+
 footer {
   background-color: #3f3f3f;
   color: #d5d5d5;
@@ -139,6 +148,7 @@ hr.light {
   margin-bottom: 1rem;
 
 }
+
 
 
 /*---Media Queries --*/
@@ -179,6 +189,7 @@ hr.light {
   .display-4 {
     font-size: 200%;
   }
+
 
   .social a {
     font-size: 2.5em;
